VCD Frontend/src/CSS/circuitsMenu.css
/*_______circuits menu_______*/
.circuitsMenu {
    /*width: 15.33rem;*/
    max-height: 70vh;
    z-index: 200;
    position: fixed;
    top: 2.5rem;
    left: -20.33rem;
    margin: 0.5rem 0 0 0.5rem;
    border-radius: 0.5rem;
    background-color: #ffffff;
    transition: 0.3s ease-in-out;
    user-select: none;
    border: 0.05rem solid #cacaca;
}

.circuitsMenu.open {
    transition: 0.3s ease-out;
    position: fixed;
    left: 0;
}

.circuitsMenuInnerButton {
    background-color: #ffffff;
    border: none;
    transition: 0.15s ease-out;
    border-radius: 0.5rem;
    width: 3.33rem;
    height: 3.33rem;
    /*margin: 0.05rem;*/
}

.circuitsMenuInnerButton:hover {
    transition: 0.15s ease-out;
    background-color: #dadada;
}

.circuitsMenuInnerButton:active {
    transition: 0.05s ease-out;
    background-color: #dbedff;
    box-shadow: none;
}

.circuitsMenuTitle {
    margin-top: 0.66rem;
    text-align: center;
    font-size: 1.32rem;
}

.buttonPicture {
    width: 2.66rem;
    align-items: center;
    vertical-align: middle;
}

.buttonText {
    vertical-align: bottom;
    font-size: 10px;
    text-align: center;
    width: 100%;
    font-family: Montserrat, serif;
    font-weight: 600;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.gates {
    padding: 0;
    animation: fadeIn 0.3s ease-in-out;
    text-align: center;
}

.gates-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(3.33rem, 1rem));
    gap: 0.5rem;
    padding: 0.5rem 0;
}

.menu-item.active .gates-grid {
    max-height: 500px; /* Enough for content */
}

.arrow {
    height: 0.75rem;
    color: black;
    transition: transform 0.15s;
    cursor: pointer;
    user-select: none;
    margin: 0.25rem;
    transform: rotate(90deg);
}

.menu-item.active .arrow {
    transform: rotate(180deg);
}


/*_______Open Menu_______*/
.openCircuitsMenuButton {
    position: fixed;
    top: 0.5rem;
    left: 0.5rem;
    width: 2rem;
    height: 2rem;
    z-index: 500;
    background-color: #ffffff;
    border: #cacaca solid 0.07rem;
    transition: 0.15s ease-out;
    border-radius: 0.33rem;
    user-select: none;
}

.openCircuitsMenuButtonIcon {
    width: 1.4rem;
    height: 1.4rem;
    user-select: none;
    margin: auto;
    display: block;
    justify-content: center;
    align-items: center;
}

.openCircuitsMenuButton:hover {
    transition: 0.15s ease-out;
    background-color: #dadada;
}

.openCircuitsMenuButton:active {
    transition: 0.05s ease-out;
    background-color: #e3e3e3;
    box-shadow: none;
}

